--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,10 @@ set(CMAKE_CXX_STANDARD 17)
 # Include directories
 include_directories("${CMAKE_SOURCE_DIR}/Lib/include")
 
-# Add executable
 add_executable(Designi2 main.cpp)
+
+
+find_package(Threads REQUIRED)
+target_link_libraries(Designi2 PRIVATE Threads::Threads)
+
+# Add executable
